--- a/css/style.css
+++ b/css/style.css
@@ -391,6 +391,26 @@ button {
     min-height: 720px;
     height: 100vh;
 }
+
+
+#bgvid {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+/* -Image Overlay- */
+.hero-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.6);
+}
+
+
+
+
 /* -Hero Image Caption- */
 .hero-caption {
     display: block;
